// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert[Base] should render correctly  1`] = `
<div>
  <div
    class="so-descriptions-wrapper"
  >
    <div
      class="so-descriptions-header"
    >
      <div
        class="so-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="so-descriptions-body so-descriptions-inline-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="so-descriptions-table"
      >
        <tbody>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-inline-table"
            >
              <div
                class="so-descriptions-item"
              >
                <div
                  class="so-descriptions-label-inline"
                >
                  Name
                   :
                </div>
                <div
                  class="so-descriptions-value-inline"
                >
                  Mai Mai
                </div>
              </div>
            </td>
            <td
              class="so-descriptions-inline-table"
            >
              <div
                class="so-descriptions-item"
              >
                <div
                  class="so-descriptions-label-inline"
                >
                  Residence
                   :
                </div>
                <div
                  class="so-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
            <td
              class="so-descriptions-inline-table"
            >
              <div
                class="so-descriptions-item"
              >
                <div
                  class="so-descriptions-label-inline"
                >
                  Address
                   :
                </div>
                <div
                  class="so-descriptions-value-inline"
                >
                  Yingdu Building,Zhichun Road,Beijing
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-inline-table"
            >
              <div
                class="so-descriptions-item"
              >
                <div
                  class="so-descriptions-label-inline"
                >
                  Mobile
                   :
                </div>
                <div
                  class="so-descriptions-value-inline"
                >
                  187-2323-9834
                </div>
              </div>
            </td>
            <td
              class="so-descriptions-inline-table"
              colspan="2"
            >
              <div
                class="so-descriptions-item"
              >
                <div
                  class="so-descriptions-label-inline"
                >
                  Hometown
                   :
                </div>
                <div
                  class="so-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about alignment 1`] = `
<div>
  <div
    class="so-descriptions-wrapper"
    style="margin-bottom: 24px;"
  >
    <div
      class="so-descriptions-header"
    >
      <div
        class="so-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="so-descriptions-body so-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="so-descriptions-table"
      >
        <tbody>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
            >
              Name
            </td>
            <td
              class="so-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="so-descriptions-label"
            >
              Residence
            </td>
            <td
              class="so-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="so-descriptions-label"
            >
              Address
            </td>
            <td
              class="so-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
            >
              Hometown
            </td>
            <td
              class="so-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="so-descriptions-label"
            >
              Mobile
            </td>
            <td
              class="so-descriptions-value"
              colspan="3"
            >
              187-2323-9834
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="so-descriptions-wrapper"
    style="margin-bottom: 24px;"
  >
    <div
      class="so-descriptions-header"
    >
      <div
        class="so-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="so-descriptions-body so-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="so-descriptions-table"
      >
        <tbody>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Name
            </td>
            <td
              class="so-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Residence
            </td>
            <td
              class="so-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Address
            </td>
            <td
              class="so-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Hometown
            </td>
            <td
              class="so-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Mobile
            </td>
            <td
              class="so-descriptions-value"
              colspan="3"
            >
              187-2323-9834
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="so-descriptions-wrapper"
  >
    <div
      class="so-descriptions-header"
    >
      <div
        class="so-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="so-descriptions-body"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="so-descriptions-table"
      >
        <tbody>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
            >
              Name
            </td>
            <td
              class="so-descriptions-label"
            >
              Residence
            </td>
            <td
              class="so-descriptions-label"
            >
              Address
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="so-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="so-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
            >
              Hometown
            </td>
            <td
              class="so-descriptions-label"
              colspan="2"
            >
              Mobile
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="so-descriptions-value"
              colspan="2"
            >
              187-2323-9834
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about border 1`] = `
<div>
  <div
    class="so-descriptions-wrapper"
    style="margin-bottom: 20px;"
  >
    <div
      class="so-descriptions-header"
    >
      <div
        class="so-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="so-descriptions-body so-descriptions-border so-descriptions-table-layout-fixed so-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="so-descriptions-table"
      >
        <tbody>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
            >
              Name
            </td>
            <td
              class="so-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="so-descriptions-label"
            >
              Residence
            </td>
            <td
              class="so-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="so-descriptions-label"
            >
              Address
            </td>
            <td
              class="so-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
            >
              Mobile
            </td>
            <td
              class="so-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="so-descriptions-label"
            >
              Hometown
            </td>
            <td
              class="so-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="so-descriptions-wrapper"
    style="margin-bottom: 20px;"
  >
    <div
      class="so-descriptions-header"
    >
      <div
        class="so-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="so-descriptions-body so-descriptions-border so-descriptions-table-layout-fixed so-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="so-descriptions-table"
      >
        <tbody>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Name
            </td>
            <td
              class="so-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Residence
            </td>
            <td
              class="so-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Address
            </td>
            <td
              class="so-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Mobile
            </td>
            <td
              class="so-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Hometown
            </td>
            <td
              class="so-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="so-descriptions-wrapper"
  >
    <div
      class="so-descriptions-header"
    >
      <div
        class="so-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="so-descriptions-body so-descriptions-border so-descriptions-table-layout-fixed"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="so-descriptions-table"
      >
        <tbody>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
            >
              Name
            </td>
            <td
              class="so-descriptions-label"
            >
              Residence
            </td>
            <td
              class="so-descriptions-label"
            >
              Address
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="so-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="so-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
            >
              Mobile
            </td>
            <td
              class="so-descriptions-label"
              colspan="2"
            >
              Hometown
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="so-descriptions-value"
              colspan="2"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about colums 1`] = `
<div>
  <div
    class="so-descriptions-wrapper"
    style="margin-bottom: 24px;"
  >
    <div
      class="so-descriptions-header"
    >
      <div
        class="so-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="so-descriptions-body so-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="so-descriptions-table"
      >
        <tbody>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
            >
              Name
            </td>
            <td
              class="so-descriptions-value"
            >
              Mai Mai
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
            >
              Residence
            </td>
            <td
              class="so-descriptions-value"
            >
              Beijing
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
            >
              Address
            </td>
            <td
              class="so-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
            >
              Mobile
            </td>
            <td
              class="so-descriptions-value"
            >
              187-2323-9834
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
            >
              Hometown
            </td>
            <td
              class="so-descriptions-value"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="so-descriptions-wrapper"
  >
    <div
      class="so-descriptions-header"
    >
      <div
        class="so-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="so-descriptions-body so-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="so-descriptions-table"
      >
        <tbody>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Name
            </td>
            <td
              class="so-descriptions-value"
            >
              Mai Mai
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Residence
            </td>
            <td
              class="so-descriptions-value"
            >
              Beijing
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Address
            </td>
            <td
              class="so-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Mobile
            </td>
            <td
              class="so-descriptions-value"
            >
              187-2323-9834
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Hometown
            </td>
            <td
              class="so-descriptions-value"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about responsive 1`] = `
<div>
  <div
    class="so-descriptions-wrapper"
  >
    <div
      class="so-descriptions-header"
    >
      <div
        class="so-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="so-descriptions-body so-descriptions-border so-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="so-descriptions-table"
      >
        <tbody>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Name
            </td>
            <td
              class="so-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Residence
            </td>
            <td
              class="so-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Address
            </td>
            <td
              class="so-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Mobile
            </td>
            <td
              class="so-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Hometown
            </td>
            <td
              class="so-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about size 1`] = `
<div>
  <div
    class="so-radio-group so-radio-group-button so-button-group"
    style="margin-bottom: 24px;"
  >
    <button
      class="so-radio-wrapper so-button-secondary so-button-button so-button-outline"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        small
      </span>
    </button>
    <button
      class="so-radio-wrapper so-radio-wrapper-checked so-button-primary so-button-button so-button-outline"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        default
      </span>
    </button>
    <button
      class="so-radio-wrapper so-button-secondary so-button-button so-button-outline"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        large
      </span>
    </button>
  </div>
  <div
    class="so-descriptions-wrapper"
    style="margin-bottom: 20px;"
  >
    <div
      class="so-descriptions-header"
    >
      <div
        class="so-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="so-descriptions-body so-descriptions-inline-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="so-descriptions-table"
      >
        <tbody>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-inline-table"
            >
              <div
                class="so-descriptions-item"
              >
                <div
                  class="so-descriptions-label-inline"
                >
                  Name
                   :
                </div>
                <div
                  class="so-descriptions-value-inline"
                >
                  Mai Mai
                </div>
              </div>
            </td>
            <td
              class="so-descriptions-inline-table"
            >
              <div
                class="so-descriptions-item"
              >
                <div
                  class="so-descriptions-label-inline"
                >
                  Residence
                   :
                </div>
                <div
                  class="so-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
            <td
              class="so-descriptions-inline-table"
            >
              <div
                class="so-descriptions-item"
              >
                <div
                  class="so-descriptions-label-inline"
                >
                  Address
                   :
                </div>
                <div
                  class="so-descriptions-value-inline"
                >
                  Yingdu Building,Zhichun Road,Beijing
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-inline-table"
            >
              <div
                class="so-descriptions-item"
              >
                <div
                  class="so-descriptions-label-inline"
                >
                  Mobile
                   :
                </div>
                <div
                  class="so-descriptions-value-inline"
                >
                  187-2323-9834
                </div>
              </div>
            </td>
            <td
              class="so-descriptions-inline-table"
              colspan="2"
            >
              <div
                class="so-descriptions-item"
              >
                <div
                  class="so-descriptions-label-inline"
                >
                  Hometown
                   :
                </div>
                <div
                  class="so-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="so-descriptions-wrapper"
  >
    <div
      class="so-descriptions-header"
    >
      <div
        class="so-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="so-descriptions-body so-descriptions-border so-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="so-descriptions-table"
      >
        <tbody>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Name
            </td>
            <td
              class="so-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Residence
            </td>
            <td
              class="so-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Address
            </td>
            <td
              class="so-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="so-descriptions-row"
          >
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Mobile
            </td>
            <td
              class="so-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="so-descriptions-label"
              style="text-align: right;"
            >
              Hometown
            </td>
            <td
              class="so-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
